@@ -23,6 +23,7 @@ import org.elasticsearch.cluster.routing.ShardRoutingRoleStrategy;
 import org.elasticsearch.cluster.routing.ShardRoutingState;
 import org.elasticsearch.cluster.routing.TestShardRouting;
 import org.elasticsearch.common.Randomness;
+import org.elasticsearch.common.Strings;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.core.Tuple;
 import org.elasticsearch.index.IndexVersion;
@@ -75,15 +76,11 @@ public class TransportClusterHealthActionTests extends ESTestCase {
 
         clusterState = ClusterState.builder(ClusterName.DEFAULT).build();
         project = clusterState.metadata().getProject(Metadata.DEFAULT_PROJECT_ID);
-        response = createResponse(indices, clusterState, project);
+        response = createResponse(Strings.EMPTY_ARRAY /* no indices */ , clusterState, project);
         assertThat(TransportClusterHealthAction.prepareResponse(request, response, project, null), equalTo(1));
     }
 
     ClusterState randomClusterStateWithInitializingShards(String index, final int initializingShards, ProjectId projectId) {
-        final IndexMetadata indexMetadata = IndexMetadata.builder(index)
-            .settings(indexSettings(IndexVersion.current(), between(1, 10), randomInt(20)))
-            .build();
-
         final List<ShardRoutingState> shardRoutingStates = new ArrayList<>();
         if (initializingShards == 1 && randomBoolean()) {
             shardRoutingStates.add(ShardRoutingState.INITIALIZING);
@@ -99,8 +96,13 @@ public class TransportClusterHealthActionTests extends ESTestCase {
             Randomness.shuffle(shardRoutingStates);
 
             // primary must be active, otherwise replicas can't in initializing or relocating state.
-            shardRoutingStates.add(0, randomFrom(ShardRoutingState.STARTED, ShardRoutingState.RELOCATING));
+            shardRoutingStates.addFirst(randomFrom(ShardRoutingState.STARTED, ShardRoutingState.RELOCATING));
         }
+
+        final int numberOfReplicas = shardRoutingStates.size() - 1;
+        final IndexMetadata indexMetadata = IndexMetadata.builder(index)
+            .settings(indexSettings(IndexVersion.current(), 1, numberOfReplicas))
+            .build();
 
         final ShardId shardId = new ShardId(indexMetadata.getIndex(), 0);
         final IndexRoutingTable.Builder routingTable = new IndexRoutingTable.Builder(
@@ -110,7 +112,7 @@ public class TransportClusterHealthActionTests extends ESTestCase {
 
         // Primary
         {
-            ShardRoutingState state = shardRoutingStates.remove(0);
+            ShardRoutingState state = shardRoutingStates.removeFirst();
             String node = "node";
             String relocatingNode = state == ShardRoutingState.RELOCATING ? "relocating" : null;
             routingTable.addShard(TestShardRouting.newShardRouting(shardId, node, relocatingNode, true, state));
@@ -124,7 +126,7 @@ public class TransportClusterHealthActionTests extends ESTestCase {
             routingTable.addShard(TestShardRouting.newShardRouting(shardId, node, relocatingNode, false, state));
         }
 
-        var projects = randomMap(0, 5, () -> {
+        final var projects = randomMap(0, 5, () -> {
             var id = randomUniqueProjectId();
             return Tuple.tuple(id, ProjectMetadata.builder(id).build());
         });
